# slack_bot_rust

./: Cargo.toml  build.sh
src/: jenkinsfile  jira.json  lib.rs  main.rs
src/context/: mod.rs
src/formatter/: formatter.rs  mod.rs
src/jira/: mod.rs  structure.rs  traits.rs
src/macros/: mod.rs
src/slack/: block.rs  block_gen.rs  block_struct.rs  channel.rs  field_gen.rs  generator.rs  mod.rs  msg_struct.rs  structure.rs
src/userdb/: mod.rs
