[package]
name = "slack_bot"
version = "0.1.0"
authors = ["yangjiangdong <aiaoyang@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

actix-web = "3"

openssl-sys = "0.9.60"
openssl = "0.10"